--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/push-notifications": "^6.0.2",
     "@capacitor/status-bar": "6.0.1",
+    "@clerk/clerk-js": "^5.39.0",
     "@clerk/clerk-react": "^5.16.0",
     "@clerk/elements": "^0.19.8",
     "@ionic/react": "^8.2.7",
     "@ionic/react-router": "^8.2.7",
     "@ionic/storage": "^4.0.0",
+    "capacitor-secure-storage-plugin": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
